--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .hero-overlay p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     color: #cccccc;
 }
@@ -107,7 +107,7 @@ body {
 }
 
 .card p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
     color: #d0d0d0;
 }
@@ -125,9 +125,13 @@ body {
     padding: 30px;
     border-radius: 12px;
     border: 1px solid #333;
+}
+
+.texto-peque {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     color: #d0d0d0;
     line-height: 1.7;
-    font-family: 'Roboto', sans-serif;
 }
 
 /* GALERÍA */
@@ -144,6 +148,7 @@ body {
 
 .galeria-grid img {
     width: 100%;
+    max-width: 780px;
     height: 230px;
     object-fit: cover;
     border-radius: 10px;
@@ -169,10 +174,6 @@ body {
     justify-content: center;
 }
 
-.texto {
-    max-width: 500px;
-}
-
 .texto h2 {
     font-family: 'Montserrat', sans-serif;
     color: #ff2a2a;
@@ -181,7 +182,7 @@ body {
 }
 
 .texto p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.7;
     color: #cfcfcf;
 }
@@ -212,7 +213,6 @@ body {
     flex-direction: column;
     gap: 15px;
     max-width: 400px;
-    font-family: 'Roboto', sans-serif;
 }
 
 .form-contacto input,
@@ -223,7 +223,6 @@ body {
     background: #222;
     color: #fff;
     resize: none;
-    font-family: 'Roboto', sans-serif;
 }
 
 .form-contacto button {
@@ -244,7 +243,6 @@ body {
 .info-contacto {
     margin-top: 20px;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
 }
 
 .info-contacto p {
@@ -258,5 +256,16 @@ body {
     padding: 25px;
     border-top: 2px solid #b30000;
     color: #888;
-    font-family: 'Roboto', sans-serif;
+}
+
+/* RESPONSIVE */
+@media(max-width: 900px) {
+    .contacto-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .experiencia-contenido {
+        flex-direction: column;
+    }
 }
